--- a/src/main/resources/static/ataques.html
+++ b/src/main/resources/static/ataques.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ATM - Home</title>
+    <title>ATM - Tipos de Ataques</title>
 
     <!-- MDB CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.2/mdb.min.css" rel="stylesheet" />
