--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ATM | Management Vulnerability</title>
+        <title>ATM | Cybersecurity</title>
         
         <link rel="stylesheet" href="styles.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.2/mdb.min.css" rel="stylesheet" />
@@ -14,7 +14,7 @@
         <!-- Jumbotron -->
         <div class="p-5 text-center bg-body-tertiary">
           <img src="./assets/ATM.png" alt="ATM Logo" loading="lazy" />
-          <h4 class="mb-3">Gerenciamento de Vulnerabilidades</h4>
+          <h4 class="mb-3">ATM Cibersegurança</h4>
           <h6 class="mb-3"></h6>
           <a data-mdb-ripple-init class="btn btn-primary" href="home.html" role="button">Entrar na plataforma</a>
         </div>
